--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,47 +1,1 @@
-workflows:
-  ios_native:
-    name: ThreadLoop iOS (Capacitor)
-    max_build_duration: 60
-    environment:
-      vars:
-        BUNDLE_ID: "com.threadloop.app"
-        SCHEME: "App"
-        IOS_PROJECT: "ios/App"
-        IOS_WORKSPACE: "ios/App/App.xcworkspace"
-      xcode: latest
-      node: 18
-      cocoapods: default
-    scripts:
-      - name: Install Node deps
-        script: |
-          npm ci || npm install
-      - name: Build web assets
-        script: |
-          npm run build
-      - name: Add iOS platform & sync Capacitor
-        script: |
-          npx cap add ios || true
-          npx cap sync ios
-      - name: Install CocoaPods
-        script: |
-          cd ios/App
-          pod install --repo-update
-      - name: Xcode build (debug/dev)
-        script: |
-          xcodebuild \
-            -workspace "$IOS_WORKSPACE" \
-            -scheme "$SCHEME" \
-            -configuration Debug \
-            -sdk iphoneos \
-            -archivePath $CM_BUILD_DIR/build/App.xcarchive \
-            archive CODE_SIGN_STYLE=Automatic | xcpretty
-          xcodebuild \
-            -exportArchive \
-            -archivePath $CM_BUILD_DIR/build/App.xcarchive \
-            -exportOptionsPlist $CM_EXPORT_OPTIONS_PLIST \
-            -exportPath $CM_BUILD_DIR/ipa | xcpretty
-    publishing:
-      artifacts:
-        - build/ipa/*.ipa
-        - build/ipa/*.dSYM.zip
-        - build/ipa/*.app
+null
