--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,1 +1,50 @@
-null
+workflows:
+  ios_native:
+    name: ThreadLoop iOS (Capacitor)
+    max_build_duration: 60
+
+    environment:
+      vars:
+        BUNDLE_ID: "com.threadloop.app"
+        SCHEME: "App"
+        IOS_WORKSPACE: "ios/App/App.xcworkspace"
+      xcode: latest
+      node: 18
+      cocoapods: default
+
+    scripts:
+      - name: Install Node deps
+        script: |
+          npm ci || npm install
+
+      - name: Build web assets
+        script: |
+          npm run build
+
+      - name: Add iOS platform & sync Capacitor
+        script: |
+          npx cap add ios || true
+          npx cap sync ios
+
+      - name: Install CocoaPods
+        script: |
+          cd ios/App
+          pod install --repo-update
+
+      - name: Xcode archive & export
+        script: |
+          set -euo pipefail
+          # Archive
+          xcodebuild \
+            -workspace "$IOS_WORKSPACE" \
+            -scheme "$SCHEME" \
+            -configuration Release \
+            -sdk iphoneos \
+            -archivePath build/App.xcarchive \
+            archive CODE_SIGN_STYLE=Automatic | xcpretty
+          # Export IPA directly to Codemagic's artifacts folder
+          xcodebuild \
+            -exportArchive \
+            -archivePath build/App.xcarchive \
+            -exportOptionsPlist "$CM_EXPORT_OPTIONS_PLIST" \
+            -exportPath "$CM_ARTIFACTS" | xcpretty
