--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -31,20 +31,24 @@ workflows:
           cd ios/App
           pod install --repo-update
 
-      - name: Xcode archive & export
+      - name: Xcode archive & export (raw logs)
         script: |
           set -euo pipefail
-          # Archive
+          echo "› Archiving…"
           xcodebuild \
             -workspace "$IOS_WORKSPACE" \
             -scheme "$SCHEME" \
             -configuration Release \
-            -sdk iphoneos \
+            -destination 'generic/platform=iOS' \
+            -allowProvisioningUpdates \
             -archivePath build/App.xcarchive \
-            archive CODE_SIGN_STYLE=Automatic | xcpretty
-          # Export IPA directly to Codemagic's artifacts folder
+            CODE_SIGN_STYLE=Automatic \
+            PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
+            clean archive | tee xcode-archive.log
+          echo "› Exporting IPA…"
           xcodebuild \
             -exportArchive \
             -archivePath build/App.xcarchive \
             -exportOptionsPlist "$CM_EXPORT_OPTIONS_PLIST" \
-            -exportPath "$CM_ARTIFACTS" | xcpretty
+            -allowProvisioningUpdates \
+            -exportPath "$CM_ARTIFACTS" | tee xcode-export.log
