--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,11 +4,9 @@ workflows:
     max_build_duration: 60
 
     environment:
-      groups:
-        - signing            # ← pulls TEAM_ID from the “signing” group you just created
       vars:
         BUNDLE_ID: "com.threadloop.app"
-        TEAM_ID: "${TEAM_ID}"        # resolved from the group above
+        TEAM_ID: "ANYNJ42USZ"   # <- put your 10-char Team ID here
         SCHEME: "App"
         IOS_WORKSPACE: "ios/App/App.xcworkspace"
       xcode: latest
