--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,17 +1,22 @@
 workflows:
-  ios_native:
+  ThreadLoop iOS (Capacitor):
     name: ThreadLoop iOS (Capacitor)
     max_build_duration: 60
 
     environment:
+      # This installs your iOS Development certificate and provisioning profile
+      groups:
+        - signing
+
       vars:
         BUNDLE_ID: "com.threadloop.app"
-        TEAM_ID: "ANYNJ42USZ"   # <- put your 10-char Team ID here
+        TEAM_ID: "ANYNJ42USZ"
         SCHEME: "App"
         IOS_WORKSPACE: "ios/App/App.xcworkspace"
+
       xcode: latest
-      node: 18
       cocoapods: default
+      node: 18
 
     scripts:
       - name: Install Node deps
@@ -24,7 +29,6 @@ workflows:
 
       - name: Add iOS platform & sync Capacitor
         script: |
-          npx cap add ios || true
           npx cap sync ios
 
       - name: Install CocoaPods
@@ -35,22 +39,44 @@ workflows:
       - name: Xcode archive & export (raw logs)
         script: |
           set -euo pipefail
-          echo "› Archiving…"
+
+          echo "🔐 Using manual signing with uploaded certificate & profile"
+          # Archive
           xcodebuild \
             -workspace "$IOS_WORKSPACE" \
             -scheme "$SCHEME" \
             -configuration Release \
             -destination 'generic/platform=iOS' \
-            -allowProvisioningUpdates \
             -archivePath build/App.xcarchive \
-            CODE_SIGN_STYLE=Automatic \
+            CODE_SIGN_STYLE=Manual \
             DEVELOPMENT_TEAM="$TEAM_ID" \
             PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
-            clean archive | tee xcode-archive.log
-          echo "› Exporting IPA…"
-          xcodebuild \
-            -exportArchive \
+            archive
+
+          echo "📝 Creating export options (development)"
+          cat > /tmp/exportOptions.plist << 'EOF'
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+            <dict>
+              <key>method</key><string>development</string>
+              <key>signingStyle</key><string>manual</string>
+              <key>provisioningProfiles</key>
+              <dict>
+                <key>com.threadloop.app</key><string>Threadloop Dev Prov</string>
+              </dict>
+              <key>compileBitcode</key><false/>
+              <key>destination</key><string>export</string>
+            </dict>
+          </plist>
+          EOF
+
+          echo "📦 Exporting IPA to Codemagic artifacts"
+          xcodebuild -exportArchive \
             -archivePath build/App.xcarchive \
-            -exportOptionsPlist "$CM_EXPORT_OPTIONS_PLIST" \
-            -allowProvisioningUpdates \
-            -exportPath "$CM_ARTIFACTS" | tee xcode-export.log
+            -exportOptionsPlist /tmp/exportOptions.plist \
+            -exportPath "$CM_ARTIFACTS"
+
+    artifacts:
+      - build/App.xcarchive
+      - $CM_ARTIFACTS/*.ipa
