--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,1 +1,89 @@
-null
+workflows:
+  ThreadLoop iOS (Capacitor):
+    name: ThreadLoop iOS (Capacitor)
+    max_build_duration: 60
+
+    environment:
+      groups:
+        - signing          # installs your Dev cert + "Threadloop Dev Prov" profile
+      vars:
+        BUNDLE_ID: "com.threadloop.app"
+        TEAM_ID: "ANYNJ42USZ"
+        SCHEME: "App"
+        IOS_WORKSPACE: "ios/App/App.xcworkspace"
+      xcode: latest
+      cocoapods: default
+      node: 18
+
+    scripts:
+      - name: Install Node deps
+        script: |
+          npm ci || npm install
+
+      - name: Build web assets
+        script: |
+          npm run build
+
+      - name: Add iOS platform (if missing) & sync Capacitor
+        script: |
+          set -euo pipefail
+          # Show platforms so we can decide whether to add iOS
+          npx cap ls || true
+          if ! npx cap ls | grep -qi "ios.*installed"; then
+            echo "➕ Adding iOS platform"
+            npx cap add ios
+          else
+            echo "✅ iOS platform already present"
+          fi
+          echo "🔄 Syncing Capacitor"
+          npx cap sync ios
+
+      - name: Install CocoaPods
+        script: |
+          cd ios/App
+          pod install --repo-update
+
+      - name: Xcode archive & export (raw logs)
+        script: |
+          set -euo pipefail
+
+          echo "🔐 Using manual signing with uploaded certificate & profile"
+          # Archive
+          xcodebuild \
+            -workspace "$IOS_WORKSPACE" \
+            -scheme "$SCHEME" \
+            -configuration Release \
+            -destination 'generic/platform=iOS' \
+            -archivePath build/App.xcarchive \
+            CODE_SIGN_STYLE=Manual \
+            DEVELOPMENT_TEAM="$TEAM_ID" \
+            PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
+            archive
+
+          echo "📝 Creating export options (development)"
+          cat > /tmp/exportOptions.plist << 'EOF'
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+            <dict>
+              <key>method</key><string>development</string>
+              <key>signingStyle</key><string>manual</string>
+              <key>provisioningProfiles</key>
+              <dict>
+                <key>com.threadloop.app</key><string>Threadloop Dev Prov</string>
+              </dict>
+              <key>compileBitcode</key><false/>
+              <key>destination</key><string>export</string>
+            </dict>
+          </plist>
+          EOF
+
+          echo "📦 Exporting IPA to Codemagic artifacts"
+          xcodebuild -exportArchive \
+            -archivePath build/App.xcarchive \
+            -exportOptionsPlist /tmp/exportOptions.plist \
+            -exportPath "$CM_ARTIFACTS"
+
+    artifacts:
+      - build/App.xcarchive
+      - $CM_ARTIFACTS/*.ipa
