--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,11 +5,11 @@ workflows:
 
     environment:
       groups:
-        - signing                       # your Dev cert + "Threadloop Dev Prov" profile
+        - signing                      # installs your Dev .p12 and the .mobileprovision
       vars:
         BUNDLE_ID: "com.threadloop.app"
-        TEAM_ID: "ANYNJ42USZ"
-        PROFILE_NAME: "Threadloop Dev Prov"   # <-- must match Codemagic profile name exactly
+        TEAM_ID: "ANYNJ42USZ"          # your Apple Team ID
+        PROFILE_NAME: "Threadloop Dev Prov"   # EXACT profile name as shown in Codemagic
         SCHEME: "App"
         IOS_WORKSPACE: "ios/App/App.xcworkspace"
       xcode: latest
@@ -43,12 +43,19 @@ workflows:
           cd ios/App
           pod install --repo-update
 
+      # 👉 Apply uploaded provisioning profile ONLY to the App target (Pods remain Automatic)
+      - name: Apply provisioning profile to project
+        script: |
+          # This scans the installed profiles on the VM (from the 'signing' group)
+          # and writes settings into your Xcode project so only the App target uses your profile.
+          xcode-project use-profiles --workspace "$IOS_WORKSPACE" --scheme "$SCHEME"
+
       - name: Xcode archive & export (raw logs)
         script: |
           set -euo pipefail
-          echo "🔐 Using manual signing with uploaded certificate & profile"
 
-          # ---- Archive (tell Xcode the exact provisioning profile to use) ----
+          echo "🔐 Archiving with MANUAL signing for App target; Pods stay Automatic"
+          # IMPORTANT: do NOT pass PROVISIONING_PROFILE_SPECIFIER here (it forces it on all targets)
           xcodebuild \
             -workspace "$IOS_WORKSPACE" \
             -scheme "$SCHEME" \
@@ -58,11 +65,10 @@ workflows:
             CODE_SIGN_STYLE=Manual \
             DEVELOPMENT_TEAM="$TEAM_ID" \
             PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
-            PROVISIONING_PROFILE_SPECIFIER="$PROFILE_NAME" \
             CODE_SIGN_IDENTITY="Apple Development" \
             archive
 
-          # ---- Export IPA ----
+          echo "📝 Creating export options (development)"
           cat > /tmp/exportOptions.plist << EOF
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
@@ -80,6 +86,7 @@ workflows:
           </plist>
           EOF
 
+          echo "📦 Exporting IPA to artifacts"
           xcodebuild -exportArchive \
             -archivePath build/App.xcarchive \
             -exportOptionsPlist /tmp/exportOptions.plist \
