--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,1 +1,89 @@
-null
+workflows:
+  ios_dev_build:
+    name: ThreadLoop iOS (Development, Capacitor)
+    max_build_duration: 60
+    environment:
+      xcode: latest
+      node: 18
+      cocoapods: default
+      vars:
+        BUNDLE_ID: "com.threadloop.app"
+        SCHEME: "App"
+        IOS_PROJECT: "ios/App"
+        IOS_WORKSPACE: "ios/App/App.xcworkspace"
+        TEAM_ID: "ANYNJ42USZ"
+      groups:
+        - app_store_connect   # expects APP_STORE_CONNECT_PRIVATE_KEY, APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: "main"
+          include: true
+          source: true
+    scripts:
+      - name: Install Node deps
+        script: |
+          npm ci || npm install
+      - name: Build web assets
+        script: |
+          npm run build
+      - name: Ensure iOS project & sync Capacitor
+        script: |
+          npx cap add ios || true
+          npx cap sync ios
+      - name: Install CocoaPods
+        working_directory: ios/App
+        script: |
+          pod install
+      - name: Set bundle id & team in project (safeties)
+        script: |
+          /usr/libexec/PlistBuddy -c "Set :CFBundleIdentifier $BUNDLE_ID" "ios/App/App/Info.plist"
+          agvtool new-version -all 1 || true
+      - name: Xcode archive (AUTOMATIC signing via App Store Connect API)
+        script: |
+          # Codemagic will use the App Store Connect API key to generate a dev profile for your team & bundle id.
+          xcodebuild \
+            -workspace "$IOS_WORKSPACE" \
+            -scheme "$SCHEME" \
+            -configuration Release \
+            -destination 'generic/platform=iOS' \
+            -archivePath build/App.xcarchive \
+            CODE_SIGN_STYLE=Automatic \
+            DEVELOPMENT_TEAM="$TEAM_ID" \
+            PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
+            clean archive | xcpretty
+      - name: Export IPA (development)
+        script: |
+          cat > /tmp/exportOptions.plist << EOF
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+            <dict>
+              <key>method</key><string>development</string>
+              <key>signingStyle</key><string>automatic</string>
+              <key>destination</key><string>export</string>
+              <key>stripSwiftSymbols</key><true/>
+              <key>compileBitcode</key><false/>
+              <key>signingCertificate</key><string>Apple Development</string>
+              <key>provisioningProfiles</key>
+              <dict>
+                <key>${BUNDLE_ID}</key><string></string>
+              </dict>
+            </dict>
+          </plist>
+          EOF
+          xcodebuild -exportArchive \
+            -archivePath build/App.xcarchive \
+            -exportOptionsPlist /tmp/exportOptions.plist \
+            -exportPath "$CM_ARTIFACTS" | xcpretty
+    artifacts:
+      - build/**/*
+      - $CM_ARTIFACTS/*.ipa
+    publishing:
+      email:
+        recipients:
+          - "marcus.thatcher@gmail.com"
+        notify:
+          success: true
+          failure: true
