--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
     instance_type: mac_mini_m2
 
     integrations:
-      app_store_connect: "ThreadLoop API Key"
+      app_store_connect: "ThreadLoop API Key"   # exact name from Codemagic
 
     environment:
       xcode: latest
@@ -37,10 +37,12 @@ workflows:
         script: |
           pod install --repo-update
 
+      # Key fix #1: correct Codemagic CLI usage (options first, bundle id last)
+      # This generates provisioning + export_options.plist for App Store builds.
       - name: Set up signing (automatic via ASC)
         script: |
           keychain initialize
-          app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create
+          app-store-connect fetch-signing-files --type IOS_APP_STORE --create "$BUNDLE_ID"
           keychain add-certificates
           xcode-project use-profiles
 
@@ -53,16 +55,28 @@ workflows:
             -destination "generic/platform=iOS" \
             clean archive | xcpretty
 
+      # Key fix #2: export directly to $CM_ARTIFACTS and verify the .ipa exists
       - name: Export .ipa
         script: |
           xcodebuild -exportArchive \
             -archivePath "$CM_BUILD_DIR/build/App.xcarchive" \
             -exportOptionsPlist /Users/builder/export_options.plist \
             -exportPath "$CM_ARTIFACTS" | xcpretty
+          echo "Artifacts after export:"
+          ls -lah "$CM_ARTIFACTS" || true
+          # Fallback: if ipa somehow exported elsewhere, find and copy it
+          FOUND_IPA=$(find "$CM_BUILD_DIR" -name "*.ipa" -print -quit)
+          if [ -n "$FOUND_IPA" ] && [ ! -f "$CM_ARTIFACTS/$(basename "$FOUND_IPA")" ]; then
+            echo "Copying fallback IPA from $FOUND_IPA"
+            cp "$FOUND_IPA" "$CM_ARTIFACTS/"
+          fi
+          echo "Final artifacts:"
+          ls -lah "$CM_ARTIFACTS" || true
 
     artifacts:
       - $CM_ARTIFACTS/*.ipa
-      - build/**/*
+      - $CM_BUILD_DIR/build/App.xcarchive/**/*    # helpful for debugging if needed
+      - /Users/builder/export_options.plist
 
     publishing:
       app_store_connect:
