--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,7 +13,7 @@ workflows:
       cocoapods: default
       vars:
         BUNDLE_ID: "com.threadloop.app"
-        TEAM_ID: "WF7869BFQ2"
+        TEAM_ID: "ANYNJ42USZ"
         SCHEME: "App"
         WORKSPACE: "ios/App/App.xcworkspace"
         PROJECT_PATH: "ios/App"
