--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
     instance_type: mac_mini_m2
 
     integrations:
-      app_store_connect: "ThreadLoop API Key"   # exact name from Codemagic
+      app_store_connect: "ThreadLoop API Key"
 
     environment:
       xcode: latest
@@ -37,75 +37,31 @@ workflows:
         script: |
           pod install --repo-update
 
-      # NEW: make sure Xcode project uses the correct bundle id & team
+      # Ensure the Xcode project matches your bundle id & team
       - name: Ensure bundle id & team in Xcode project
         working_directory: ios/App
         script: |
           set -e
-          echo "Before (bundle/team occurrences):"
-          grep -n "PRODUCT_BUNDLE_IDENTIFIER" App.xcodeproj/project.pbxproj || true
-          grep -n "DEVELOPMENT_TEAM" App.xcodeproj/project.pbxproj || true
-
-          # Update all occurrences in the pbxproj (BSD sed on macOS -> -i '')
           sed -i '' "s/PRODUCT_BUNDLE_IDENTIFIER = [^;]*;/PRODUCT_BUNDLE_IDENTIFIER = $BUNDLE_ID;/g" App.xcodeproj/project.pbxproj
           sed -i '' "s/DEVELOPMENT_TEAM = [A-Z0-9]*/DEVELOPMENT_TEAM = $TEAM_ID/g" App.xcodeproj/project.pbxproj
 
-          echo "After (bundle/team occurrences):"
-          grep -n "PRODUCT_BUNDLE_IDENTIFIER" App.xcodeproj/project.pbxproj || true
-          grep -n "DEVELOPMENT_TEAM" App.xcodeproj/project.pbxproj || true
-
-          echo "Key Xcode build settings now:"
-          xcodebuild -workspace "../App.xcworkspace" -scheme "$SCHEME" -showBuildSettings \
-            | /usr/bin/grep -E "PRODUCT_BUNDLE_IDENTIFIER|DEVELOPMENT_TEAM|CODE_SIGN_STYLE|PROVISIONING_PROFILE_SPECIFIER" || true
-
-      # Fetch signing assets and apply them
-      - name: Set up signing (automatic via ASC)
+      # IMPORTANT: Use stored cert, fetch ONLY profiles (no --create, no cert download)
+      - name: Set up signing (use stored cert + fetch profiles)
         script: |
           set -e
           keychain initialize
-          # Options first, then bundle id as positional arg:
-          app-store-connect fetch-signing-files --type IOS_APP_STORE --create "$BUNDLE_ID"
           keychain add-certificates
-          # Apply the provisioning profiles to the project & generate export_options.plist
+          app-store-connect fetch-signing-files --type IOS_APP_STORE "$BUNDLE_ID"
           xcode-project use-profiles
 
-          echo "------ Debug: installed code signing identities ------"
-          security find-identity -p codesigning -v || true
-
-          echo "------ Debug: installed provisioning profiles ------"
-          ls -lah "$HOME/Library/MobileDevice/Provisioning Profiles" || true
-          /usr/bin/grep -R "com.threadloop.app" "$HOME/Library/MobileDevice/Provisioning Profiles" -n || true
-
-          echo "------ Debug: current Xcode build settings (key bits) ------"
-          xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -showBuildSettings \
-            | /usr/bin/grep -E "PRODUCT_BUNDLE_IDENTIFIER|DEVELOPMENT_TEAM|CODE_SIGN_STYLE|PROVISIONING_PROFILE_SPECIFIER" || true
-
-      # Archive + export in one go, then place the IPA into artifacts
+      # Build IPA in one step and place it into artifacts
       - name: Build IPA
         script: |
           set -e
           xcode-project build-ipa --workspace "$WORKSPACE" --scheme "$SCHEME" --archive-method app-store
-
-          echo "------ Search for generated IPA ------"
-          ls -lah "$CM_BUILD_DIR/ipa" || true
-          ls -lah "$CM_BUILD_DIR" | grep -i '\.ipa' || true
-
           FOUND_IPA="$(find "$CM_BUILD_DIR" -name '*.ipa' -print -quit || true)"
-          if [ -z "$FOUND_IPA" ]; then
-            FOUND_IPA="$(find . ios/App -name '*.ipa' -print -quit || true)"
-          fi
-
-          if [ -n "$FOUND_IPA" ]; then
-            echo "Found IPA at: $FOUND_IPA"
-            cp "$FOUND_IPA" "$CM_ARTIFACTS/"
-          else
-            echo "❌ No IPA found after build-ipa (likely a signing/export issue)"
-            echo "Dumping export_options.plist (if present):"
-            [ -f /Users/builder/export_options.plist ] && cat /Users/builder/export_options.plist || echo "No export_options.plist"
-            exit 2
-          fi
-
-          echo "------ Final artifacts ------"
+          [ -z "$FOUND_IPA" ] && FOUND_IPA="$(find . ios/App -name '*.ipa' -print -quit || true)"
+          [ -n "$FOUND_IPA" ] && cp "$FOUND_IPA" "$CM_ARTIFACTS/" || (echo "No IPA found" && exit 2)
           ls -lah "$CM_ARTIFACTS" || true
 
     artifacts:
